--- a/backend/package.json
+++ b/backend/package.json
@@ -19,14 +19,15 @@
     "scripts": "dist/**/*.js",
     "assets": [
       "config.yaml",
-      "config.development.yaml"
+      "config.development.yaml",
+      "public"
     ],
     "targets": [
       "node22-linux-x64",
       "node22-macos-x64",
       "node22-win-x64"
     ],
-    "outputPath": "packaged"
+    "outputPath": "bin"
   },
   "author": "Jonathan Prevost",
   "license": "MIT",
