feat(search): add full-text search using sqlite FTS5

--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "name": "backend",
   "private": true,
   "version": "1.0.0",
-  "description": "Backend server for tenuki-database",
+  "description": "Backend server for SGF Flow",
   "main": "dist/index.js",
   "bin": "dist/index.js",
   "scripts": {
