--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,18 @@
   },
   "dependencies": {
     "@preact/signals": "^2.3.2",
+    "@sabaki/go-board": "^1.4.3",
+    "@sabaki/sgf": "^3.4.7",
+    "@sabaki/shudan": "^1.7.1",
     "@tailwindcss/vite": "^4.1.14",
     "axios": "^1.12.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router": "^7.9.3",
+    "react-router-dom": "^7.9.3",
     "react-window": "^2.2.0",
-    "tailwindcss": "^4.1.14"
+    "tailwindcss": "^4.1.14",
+    "vite-plugin-commonjs": "^0.10.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
