--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,10 @@
     "@sabaki/shudan": "^1.7.1",
     "@tailwindcss/vite": "^4.1.14",
     "axios": "^1.12.2",
+    "i18next": "^25.5.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-i18next": "^16.0.0",
     "react-router": "^7.9.3",
     "react-router-dom": "^7.9.3",
     "react-window": "^2.2.0",
